# oer-alttext

./: .gitignore  README.md  app.py  config.py  environment.yml  pyproject.toml  requirements.txt  test.py
.streamlit/: config.toml
scripts/: example_alttext.py
src/: llm.py
