[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [{include = "src"}]

[project]
name = "oer-alttext"
version = "0.1.0"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "fabdata-llm @ git+https://github.com/AI-for-Education/fabdata-llm.git@v0.18.1",
    "python-dotenv == 1.0.*",
    "pymupdf == 1.24.*",
    "pillow == 9.5.0",
    "numpy == 1.26.*",
    "pandas == 2.*",
    "tqdm == 4.*",
    "seaborn == 0.13.*",
]
